--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "react-icons": "^5.0.1",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.2",
+    "redux-persist": "^6.0.0",
     "sass": "^1.69.7"
   },
   "devDependencies": {
